kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esports-realtime-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: esports-realtime
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  esports-realtime
    spec:
      containers:
      - name:  esports-realtime
        image:  europe-docker.pkg.dev/vash-esports/esports-realtime/esports-realtime
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        # livenessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        ports:
        - containerPort: 3001
      restartPolicy: Always
