kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esports-realtime-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}' 
spec:
  selector:
    app: esports-realtime
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
