kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esports-realtime-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: web-ip
    cert-manager.io/issuer: esports-realtime-issuer
spec:
  tls:
    - secretName: web-ssl
      hosts:
        - realtime.esports.vash.software
  defaultBackend:
    service:
      name: esports-realtime-service
      port:
        number: 80
